# TLogic

./: pyproject.toml
data/YAGO4.5/: entity2id.json  relation2id.json  stat.txt  test.txt  train.txt  ts2id.json  valid.txt
mycode/: apply.py  rule_application.py
