[project]
name = "logical-tkgs"
version = "0.1.0"
description = ""
authors = [{ name = "Yushan Liu", email = "yushan.liu@siemens.com" }]
requires-python = ">=3.9,<3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy>=1.21.4,<2",
    "joblib>=1.2.0,<2",
    "pandas>=1.3.4,<2",
    "notebook>=6.4.12,<7",
    "torch>=2.8.0",
]

[dependency-groups]
dev = []

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [
  { index = "torch-cpu" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true